--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pedantic-pick",
-  "version": "0.2.1",
+  "version": "0.2.1-3",
   "author": "Luke Plaster <notatestuser@gmail.com>",
-  "description": "an extension of `_.pick` that runs validation functions on picked attributes",
+  "description": "an extension of `_.pick` that applies validation expressions to picked attributes",
   "repository": {
     "type": "git",
     "url": "https://github.com/notatestuser/pedantic-pick.git"
@@ -12,9 +12,9 @@
     "pick",
     "underscore",
     "lodash",
-    "validator",
+    "form",
     "validation",
-    "synchronous"
+    "validator"
   ],
   "main": "./pick",
   "scripts": {
