--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lodash.isarray": "~2.4.0"
   },
   "devDependencies": {
-    "fox": "0.0.11",
+    "fox": "~1.6.0",
     "sinon": "~1.7.0",
     "coffee-script": "~1.6.0"
   },
